--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -12,11 +12,11 @@ per_page: 10
 
 <ul>
   <% page_articles.each_with_index do |article, i| %>
-    <li>
+    <li class="blog-entry">
       <h3><%= link_to article.title, article %></h3>
       <h5><%= article.date.strftime('%b %e') %></h3>
-      <!-- use article.summary(250) if you have Nokogiri available to show just the first 250 characters -->
-      <p><%= article.body %></h3>
+      <p><%= article.summary %></h3>
+      <p><%= link_to 'Read more...', article %></p>
     </li>
   <% end %>
 </ul>
