--- a/source/stylesheets/bitters/_lists.scss
+++ b/source/stylesheets/bitters/_lists.scss
@@ -3,6 +3,10 @@ ul, ol {
   padding: 0;
   list-style-type: none;
 
+  li.blog-entry {
+    margin-bottom: 1.875em;
+  }
+
   &%default-ul {
     list-style-type: disc;
     margin-bottom: $base-line-height / 2;
