--- a/source/stylesheets/bitters/_variables.scss
+++ b/source/stylesheets/bitters/_variables.scss
@@ -5,6 +5,7 @@ $serif: $georgia;
 
 $base-font-family: $sans-serif;
 $header-font-family: $base-font-family;
+$nav-font-family: 'Amatic SC';
 
 // Sizes
 ///////////////////////////////////////////////////////////////////////////////
@@ -15,7 +16,7 @@ $base-border-radius: em(3);
 // Colors
 ///////////////////////////////////////////////////////////////////////////////
 
-$blue: #477DCA;
+$awesome_color: #2BD7A0;
 $dark-gray: #333;
 $medium-gray: #999;
 $light-gray: #DDD;
@@ -28,7 +29,7 @@ $base-body-color: white;
 
 //  Font Colors
 $base-font-color: $dark-gray;
-$base-accent-color: $blue;
+$base-accent-color: $awesome_color;
 
 //  Text Link Colors
 $base-link-color: $base-accent-color;
