Fix temporarily header link. Ugh.

--- a/source/partials/_nav.erb
+++ b/source/partials/_nav.erb
@@ -1,7 +1,7 @@
 <nav>
   <ul>
     <li>
-      <%= link_to "dead waters rise higher than your mind", "index.html", class: 'blog-title' %>
+      <%= link_to "dead waters rise higher than your mind", 'https://svankmajer.github.io/rants/', class: 'blog-title' %>
     </li>
   </ul>
 </nav>
