Update font color.

--- a/source/stylesheets/bitters/_variables.scss
+++ b/source/stylesheets/bitters/_variables.scss
@@ -17,7 +17,7 @@ $base-border-radius: em(3);
 ///////////////////////////////////////////////////////////////////////////////
 
 $awesome_color: #2BD7A0;
-$dark-gray: #333;
+$dark-gray: #4C4639;
 $medium-gray: #999;
 $light-gray: #DDD;
 $light-red: #FBE3E4;
