Update styles and static content.
* Adds contact information in the footer section.
* Adds favicon.
* Changes main color to a more comfortable one (I think).
* Changes header format and content (vanity).
* Changes page title to a more succint one.

--- a/source/partials/_nav.erb
+++ b/source/partials/_nav.erb
@@ -3,5 +3,6 @@
     <li>
       <%= link_to "dead waters rise higher than your mind", '/', class: 'blog-title' %>
     </li>
+    <li>a learning logbook</li>
   </ul>
 </nav>
