--- a/source/stylesheets/bitters/_variables.scss
+++ b/source/stylesheets/bitters/_variables.scss
@@ -16,7 +16,7 @@ $base-border-radius: em(3);
 // Colors
 ///////////////////////////////////////////////////////////////////////////////
 
-$awesome_color: #2BD7A0;
+$awesome_color: #4B726D;
 $dark-gray: #4C4639;
 $medium-gray: #999;
 $light-gray: #DDD;
