--- a/source/partials/_footer.erb
+++ b/source/partials/_footer.erb
@@ -1,4 +1,9 @@
 <footer>
+  <div>
+    <p>
+      Follow me online on <a href="https://twitter.com/5vankmajer">Twitter</a> and <a href="https://github.com/svankmajer">GitHub</a>.
+    </p>
+  </div>
   <ul class="large-column">
     <li><h5 class="heading">Recent articles</h5></li>
     <li>
