Improve presentation of posts.
* Better markup on the display of posts under a certain tag.
* Better markup on the display of dates (adds the year).

--- a/source/stylesheets/bitters/_lists.scss
+++ b/source/stylesheets/bitters/_lists.scss
@@ -7,6 +7,10 @@ ul, ol {
     margin-bottom: 1.875em;
   }
 
+  li.tagged_post {
+    margin-top: 20px;
+  }
+
   &%default-ul {
     list-style-type: disc;
     margin-bottom: $base-line-height / 2;
