--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -14,7 +14,7 @@ per_page: 10
   <% page_articles.each_with_index do |article, i| %>
     <li class="blog-entry">
       <h3><%= link_to article.title, article %></h3>
-      <h5><%= article.date.strftime('%b %e') %></h3>
+      <h5><%= article.date.strftime('%b %e, %Y') %></h3>
       <p><%= article.summary %></h3>
       <p><%= link_to 'Read more...', article %></p>
     </li>
