--- a/source/partials/_footer.erb
+++ b/source/partials/_footer.erb
@@ -8,7 +8,7 @@
     <li><h5 class="heading">Recent articles</h5></li>
     <li>
       <ol>
-        <%- blog.articles[0...10].each do |article| -%>
+        <%- blog.articles[0..3].each do |article| -%>
           <li>
             <%= link_to article.title, article %>
             <span><%= article.date.strftime('%b %e') %></span>
