Show only the four most used tags on index.

--- a/source/partials/_footer.erb
+++ b/source/partials/_footer.erb
@@ -21,7 +21,8 @@
     <li><h5 class="heading">Tags</h5></li>
     <li>
       <ol>
-        <% blog.tags.each do |tag, articles| %>
+        <% tags = blog.tags.sort_by {|k, v| v.size}.reverse.take(4) %>
+        <% tags.each do |tag, articles| %>
           <li><%= link_to "#{tag} (#{articles.size})", tag_path(tag) %></li>
         <% end %>
       </ol>
