--- a/source/layout.erb
+++ b/source/layout.erb
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv='X-UA-Compatible' content='IE=edge;chrome=1' />
+    <meta name="description" content='Posts about Ruby, Clojure, web development, and other geeky topics.'>
+    <meta name="viewport" content='width=device-width,initial-scale=1'>
     <title>svankmajer's blog<%= ' - ' + current_article.title unless current_article.nil? %></title>
     <%= feed_tag :atom, "#{blog.options.prefix.to_s}/feed.xml", title: "Atom Feed" %>
     <%= stylesheet_link_tag "all" %>
