Add some basic formatting to blog posts.

--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -5,6 +5,7 @@
 @import "neat";
 
 @import "partials/layout";
+@import "partials/post_layout";
 @import "partials/nav";
 @import "partials/footer";
 
