Darken awesome color by 10%.

--- a/source/stylesheets/bitters/_variables.scss
+++ b/source/stylesheets/bitters/_variables.scss
@@ -16,7 +16,7 @@ $base-border-radius: em(3);
 // Colors
 ///////////////////////////////////////////////////////////////////////////////
 
-$awesome_color: #30EFB2;
+$awesome_color: #17D699;
 $dark-gray: #4C4639;
 $medium-gray: #999;
 $light-gray: #DDD;
