Improve post layout.
This commit improves the post header a little bit introducing a couple of
helper methods for author and formatted date retrieval.

--- a/source/layouts/post_layout.erb
+++ b/source/layouts/post_layout.erb
@@ -1,9 +1,15 @@
 <% wrap_layout :layout do %>
   <section>
     <article>
-      <h1 class="title">
-        <%= link_to current_article.title, current_article.url %>
-      </h1>
+      <div class="post-header">
+        <h1>
+          <%= link_to current_article.title, current_article.url %>
+        </h1>
+        <small>
+          On <%= article_date %>
+          by <%= article_author %>
+        </small>
+      </div>
       <div class="corpus">
         <%= yield %>
       </div>
