--- a/source/stylesheets/partials/_post_layout.scss
+++ b/source/stylesheets/partials/_post_layout.scss
@@ -1,3 +1,9 @@
-h1.title {
-  margin-bottom: 10px;
+.post-header {
+  margin-bottom: 20px;
+
+  small {
+    font-size: 1em;
+    text-transform: lowercase;
+    opacity: .5;
+  }
 }
