--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -13,10 +13,14 @@ per_page: 10
 <ul>
   <% page_articles.each_with_index do |article, i| %>
     <li class="blog-entry">
-      <h3><%= link_to article.title, article %></h3>
-      <h5><%= article.date.strftime('%b %e, %Y') %></h3>
-      <p><%= article.summary %></h3>
-      <p><%= link_to 'Read more...', article %></p>
+      <div class="post-header">
+        <h1><%= link_to article.title, article %></h1>
+        <small><%= article.date.strftime('%b %e, %Y') %></small>
+      </div>
+      <div class="corpus">
+       <%= article.summary %>
+       <p><%= link_to 'Read more...', article %></p>
+      </div>
     </li>
   <% end %>
 </ul>
