Change post details.

--- a/source/layouts/post_layout.erb
+++ b/source/layouts/post_layout.erb
@@ -6,8 +6,8 @@
           <%= link_to current_article.title, current_article.url %>
         </h1>
         <small>
-          On <%= article_date %>
-          by <%= article_author %>
+          <%= article_date %>
+          on <%= article_tags %>
         </small>
       </div>
       <div class="corpus">
