--- a/source/stylesheets/partials/_post_layout.scss
+++ b/source/stylesheets/partials/_post_layout.scss
@@ -1,9 +1,15 @@
 .post-header {
-  margin-bottom: 20px;
-
   small {
+    display: inline-block;
+    padding: 10px 0 10px 0;
     font-size: 1em;
     text-transform: lowercase;
     opacity: .5;
+  }
+}
+
+.corpus {
+  h2, h3, h4, h5 {
+    margin: 10px 0 10px 0;
   }
 }
