Add basic sub-menu for About page and other 'service' links.

--- a/source/partials/_nav.erb
+++ b/source/partials/_nav.erb
@@ -3,6 +3,15 @@
     <li>
       <%= link_to "dead waters rise higher than your mind", '/', class: 'blog-title' %>
     </li>
-    <li>a learning logbook</li>
+    <li>
+      <div class="sub-menu">
+        <ul>
+          <li><%= link_to 'Who?', '/about' %></li>
+          <li><%= link_to 'Reading', '#' %></li>
+          <li><%= link_to 'Listening', '#' %></li>
+          <li><%= link_to 'Watching', '#' %></li>
+        </ul>
+      </div>
+    <li>
   </ul>
 </nav>
