[crazy] Remove period.

--- a/source/links.html.erb
+++ b/source/links.html.erb
@@ -14,7 +14,7 @@
       <li><%= link_to 'Bret Victor', 'http://worrydream.com/' %></li>
       <li><%= link_to 'Gwern.net', 'http://www.gwern.net/' %></li>
       <li><%= link_to 'Hacker News', 'https://news.ycombinator.com/' %></li>
-      <li><%= link_to 'Hackery, Math and Design.', 'http://acko.net/' %></li>
+      <li><%= link_to 'Hackery, Math and Design', 'http://acko.net/' %></li>
       <li><%= link_to 'Mike Bostock', 'http://bost.ocks.org/mike/' %></li>
       <li><%= link_to "ntlk's blog", 'http://ntlk.net/' %></li>
       <li><%= link_to 'N+1 magazine', 'https://nplusonemag.com/' %></li>
