--- a/source/about.html.erb
+++ b/source/about.html.erb
@@ -1,9 +1,24 @@
 <div class="about">
   <p class="hi-there">¡Hola, amiguito!</p>
   <p>
-    My name is Horacio Bertorello. I currently live in Buenos Aires, Argentina. I don't have the slightest idea of <em>what</em> I am, but I call myself an <strong>application developer</strong> because it's what I'd like to become right now. A world-class code craftsman. I always dreamed of improving everything, make remarkable tools that solve real-world problems, impact positively on others. On all orders of magnitude. When others see opportunity, I see responsibility. We can do just about anything we set our minds on, so I want to take me as far as I can.
+    I'm Horacio, a curious dude born in Coronel Moldes, a little town in 
+    southern Córdoba, currently living in Buenos Aires, Argentina.
+    I don't have the slightest idea of what I am, but I keep calling myself an
+    <strong>application developer</strong> because it's what I'd like to become
+    right now.
   </p>
   <p>
-    Please, do <a href="mailto:airOnGString@gmail.com">contact me</a>. I read all emails. That's right. Every single one.
+    A world-class code craftsman.
+  </p>
+  <p>
+    I dream of improving quality of life, design and implement effective and
+    powerful tools that solve real-world problems and pose interesting
+    questions, close the gap between us. On all orders of magnitude. When
+    others may see opportunity, I see responsibility. We can do just about
+    anything we set our minds on, so I want to take me and you as far as we can.
+  </p>
+  <p>
+    Please, do <a href="mailto:airOnGString@gmail.com">contact me</a>. I read 
+    all emails. That's right. Every single one.
   </p>
 </div>
